--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <main>
     <section class="resume">
       <div class="resume-text">
-        <img src="img/Logo.png" alt="logo-provisória">
-        <h1>Lorem ipsummm, dolor sit amet consectetur it ist adipisicing</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa eum a voluptas nisi.</p>
+        <img src="img/Logokiwi.png" alt="logo">
+        <h1>Impulsione sua jornada para resultados extraordinários no mundo digital.</h1>
+        <p>Domine habilidades poderosas para alcançar o sucesso na era digital. Desperte seu potencial em um universo de oportunidades.</p>
         <a href="">Quero Aprender</a>
       </div>
       <div class="container-default-img">
-        <div class="default-img"><img src="img/Design sem nome (3).png" alt=""></div>
+        <div class="default-img"><img src="img/homem-kiwify.png" alt=""></div>
       </div>
     </section>
     <section class="quem-somos">
@@ -30,13 +30,13 @@
         <img src="img/notebookimg.png" alt="">
       </div>
       <div class="quem-somos--text">
-        <h1>Como mudaremos <span>sua vida</span></h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas praesentium numquam molestiae iusto in iste cupiditate. Eaque aut asperiores reiciendis facere non, officiis cupiditate aliquam vel, laudantium quis veniam odio.</p>
+        <h1>O Projeto <span>Visionário</span></h1>
+        <p>O <span>Projeto Visionário</span> é uma jornada revolucionária que reúne diversas habilidades em um só lugar. Explore o poder do marketing digital para impulsionar sua presença online, desenvolva técnicas persuasivas para influenciar positivamente os consumidores e otimize seu site para atrair um público qualificado.</p>
         <p>
-          Lorem <span>ipsum</span> dolor sit amet, consectetur adipisicing elit. Maiores illum modi quia officiis culpa quos cupiditate rem porro nam libero aperiam, obcaecati nemo sit esse repellendus temporibus dolorem eum omnis?
+          Além disso, desvende os segredos do dropshipping e crie oportunidades de negócio sem estoque físico. Com ferramentas avançadas e conhecimentos essenciais, expanda seus horizontes e alcance o sucesso em sua jornada empreendedora. 
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsum sequi obcaecati architecto in nam impedit aut, eligendi a cum laboriosam aliquam tempore eos quam adipisci iusto suscipit quidem quod?
+          O Projeto Visionário é a chave para uma trajetória de <span>crescimento</span> e <span>prosperidade</span> no mundo digital.
         </p>
         <a href="">Quero Aprender</a>
       </div>
@@ -55,22 +55,22 @@
       <div class="aprendizado-item pt1 icone1">
         <img src="img/ícones/1.png" alt="">
         <div class="aprendizado-item--text">
-          <h1>Modelos de Agências</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quaerat quod aut eius sint saepe numquam, aperiam nobis.</p>
+          <h1>Marketing Digital</h1>
+          <p>Essa experiência ensinará a habilidade de criar um negócio lucrativo na internet vendendo produtos digitais, desfrutando da liberdade de trabalhar remotamente de qualquer lugar do mundo.</p>
         </div>
       </div>
       <div class="aprendizado-item pt1 icone2">
         <img src="img/ícones/2.png" alt="">
         <div class="aprendizado-item--text">
-          <h1>Posicionamento</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quaerat quod aut eius sint saepe numquam, aperiam nobis.</p>
+          <h1>Dropshipping Estratégico</h1>
+          <p>Aprenda a dominar o dropshipping com estratégias profissionais e atualizadas, aproveitando as oportunidades do mercado pós-pandemia de forma eficiente e bem-sucedida.</p>
         </div>
       </div>
       <div class="aprendizado-item pt1 icone3">
         <img src="img/ícones/3.png" alt="">
         <div class="aprendizado-item--text">
-          <h1>Processamento de vendas</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quaerat quod aut eius sint saepe numquam, aperiam nobis.</p>
+          <h1>Vendas Persuasivas</h1>
+          <p>Aprenda a utilizar técnicas e abordagens persuasivas para influenciar positivamente os clientes e aumentar suas vendas, criando argumentos convincentes para o sucesso comercial.</p>
         </div>
       </div>
     </div>
@@ -78,15 +78,15 @@
       <div class="aprendizado-item pt2 icone4">
         <img src="img/ícones/4.png" alt="">
         <div class="aprendizado-item--text">
-          <h1>Gestão e delegação</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quaerat quod aut eius sint saepe numquam, aperiam nobis.</p>
+          <h1>SEO Otimizado</h1>
+          <p>Domine a arte de otimização para mecanismos de busca, aprendendo a posicionar seu conteúdo ou site nas primeiras páginas do Google, gerando mais tráfego orgânico e visibilidade online.</p>
         </div>
       </div>
       <div class="aprendizado-item pt2 icone5">
         <img src="img/ícones/5.png" alt="">
         <div class="aprendizado-item--text">
-          <h1>Processo de Escala</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quaerat quod aut eius sint saepe numquam, aperiam nobis.</p>
+          <h1>Copywriting Efetivo</h1>
+          <p>Adquira habilidades em redação persuasiva para escrever textos envolventes e persuasivos que atraem e convertem audiências, aumentando o engajamento e as vendas de produtos ou serviços.</p>
         </div>
       </div>
     </div>
@@ -116,24 +116,24 @@
     <h1>Perguntas frequentes</h1>
     <div>
       <details>
-        <summary>Lorem, ipsum dolor sit amet consectetur?</summary>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor minus fuga nam blanditiis veniam nostrum molestias soluta repudiandae iste deleniti excepturi consequuntur nobis sapiente reiciendis dignissimos expedita eos, rerum odio?</p>
+        <summary>Quais são os benefícios de participar do Projeto Visionário?</summary>
+        <p>Ao ingressar no Projeto Visionário, você terá acesso a um vasto leque de habilidades que são fundamentais para alcançar resultados excepcionais no mundo online. Essas competências permitirão que você se destaque no mercado e alcance o sucesso almejado.</p>
       </details>
       <details>
-        <summary>Lorem, ipsum dolor sit amet consectetur?</summary>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor minus fuga nam blanditiis veniam nostrum molestias soluta repudiandae iste deleniti excepturi consequuntur nobis sapiente reiciendis dignissimos expedita eos, rerum odio?</p>
+        <summary>Sou iniciante nessa área, o Projeto Visionário é adequado para mim?</summary>
+        <p>Sim! O Projeto Visionário foi projetado para atender tanto a iniciantes quanto a pessoas com experiência na área. Nossos cursos e métodos são estruturados de forma clara e abrangente, permitindo que qualquer pessoa possa aprender e aplicar os conhecimentos de maneira eficaz.</p>
       </details>
       <details>
-        <summary>Lorem, ipsum dolor sit amet consectetur?</summary>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor minus fuga nam blanditiis veniam nostrum molestias soluta repudiandae iste deleniti excepturi consequuntur nobis sapiente reiciendis dignissimos expedita eos, rerum odio?</p>
+        <summary>Quais são as formas de pagamento disponíveis para adquirir o Projeto Visionário?</summary>
+        <p>Para facilitar sua experiência, oferecemos diversas opções de pagamento, incluindo cartão de crédito, boleto bancário e transferência online. Todas as transações são realizadas de forma segura e protegida para garantir sua privacidade e segurança durante o processo de compra.</p>
       </details>
       <details>
-        <summary>Lorem, ipsum dolor sit amet consectetur?</summary>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor minus fuga nam blanditiis veniam nostrum molestias soluta repudiandae iste deleniti excepturi consequuntur nobis sapiente reiciendis dignissimos expedita eos, rerum odio?</p>
+        <summary>Como terei acesso aos conteúdos do Projeto Visionário?</summary>
+        <p>Após adquirir o Projeto Visionário, você receberá acesso instantâneo aos nossos materiais exclusivos por meio de grupos de telegram e arquivos anexados ao google drive. Dessa forma, você poderá estudar e praticar os conteúdos de forma flexível, de acordo com o seu ritmo e disponibilidade.</p>
       </details>
       <details>
-        <summary>Lorem, ipsum dolor sit amet consectetur?</summary>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor minus fuga nam blanditiis veniam nostrum molestias soluta repudiandae iste deleniti excepturi consequuntur nobis sapiente reiciendis dignissimos expedita eos, rerum odio?</p>
+        <summary>Quanto tempo tenho acesso aos materiais do Projeto Visionário?</summary>
+        <p>Ao adquirir o Projeto Visionário, você terá acesso ilimitado aos materiais e conteúdos do programa. Isso significa que poderá assistir às aulas, fazer os exercícios e revisitar o material quantas vezes desejar, mesmo após a conclusão do programa. Dessa forma, você pode aprender no seu próprio ritmo e revisar o conteúdo sempre que precisar.</p>
       </details>
     </div>
   </section> 
